Bug 1075332 - Refactor mac audio decoder. Properly calculate timestamps. r=rillian

Also, in order to prevent the MediaDecoderStateMachine to stall waiting for audio data,
feed back as many decoded audio frame as were first submitted to the decoder in one go.